# GBT

./: CMakeLists.txt  IMPLEMENTATION_PLAN.md  prompt.md
src/: main.cpp
src/can/: CanInterface.hpp  DummyCan.cpp  DummyCan.hpp  SocketCan.cpp  SocketCan.hpp
src/core/: OcppIntegration.cpp  OcppIntegration.hpp  System.cpp  System.hpp
src/gbt/: GbtController.cpp  GbtController.hpp  GbtFrames.cpp  GbtFrames.hpp  GbtStateMachine.cpp  GbtStateMachine.hpp
src/ocpp/: OcppClient.cpp  OcppClient.hpp
src/power/: PowerModule.hpp  PowerModuleStub.hpp
src/utils/: Constants.hpp  Logger.cpp  Logger.hpp
